--- a/src/style/styles.css
+++ b/src/style/styles.css
@@ -105,6 +105,7 @@ body {
   border-radius: 50%;
   border: 5px solid #ec0808;
   transition: 0.25s all ease-in-out;
+  cursor: pointer;
 }
 
 .todo-item-unchecked:hover {
