--- a/src/style/styles.css
+++ b/src/style/styles.css
@@ -109,8 +109,8 @@ body {
 }
 
 .todo-item-unchecked:hover {
-  background: hsla(0, 100%, 50%, 0.25);
-  border: 1px solid rgba(255, 0, 0, 0.25);
+  background: #ec0808;
+  border: 1px solid #fa5000;
 }
 
 .todo-item-checked {
